Even More Fixes to Box Spacing of Startup Matchmaker

--- a/d08/materials/startup-matchmaker/css/styles.css
+++ b/d08/materials/startup-matchmaker/css/styles.css
@@ -24,6 +24,10 @@ h1, .tagline, section h3 {
 	font-family: "Merriweather", serif;
 }
 
+h1 {
+	padding-left: 20px;
+}
+
 .tagline {
 	background-color: #C6C6C6;
 	text-align: center;
@@ -53,7 +57,7 @@ h1, .tagline, section h3 {
 }
 
 nav {
-	margin: 20px 0 0 0;
+	margin: 30px 0 0 0;
 	text-align: right;
 }
 
